chore: fix shodow z-index

--- a/projects/demo/src/app/examples/overview/overview.component.scss
+++ b/projects/demo/src/app/examples/overview/overview.component.scss
@@ -54,7 +54,7 @@
       pointer-events: none;
       opacity: 0;
       transition: opacity 0.3s ease;
-      z-index: 10;
+      z-index: 2;
 
       &--left {
         inset-inline-start: 0;
